# StudioManager

./: .gitignore  DESIGN-SYSTEM.md  IDEAS.md  LICENSE  README.md  V1.6.0-RELEASE-NOTES.md  index.html  package-lock.json  package.json  vitest.config.ts
Icon/: icon.ai
Icon/StudioManager.icon/: icon.json
SNAFU/: V1.6.0-RELEASE-NOTES.md
docs/: index.html
scripts/: attach-invoices.mjs  attach-receipts.mjs  migrate-data.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_billing_name_task_status.sql  003_invoice_po_number.sql  004_subtasks.sql  005_consolidate_schema.sql
src-tauri/src/: lib.rs
src/__mocks__/: tauri-api.ts  tauri-sql.ts
src/__tests__/: ErrorFallback.test.tsx  Sidebar.test.tsx  SortHeader.test.tsx  formulaEval.test.ts  lineItems.test.ts  parseActivities.test.ts  qrBill.test.ts  setup.ts  sortRows.test.ts  validateFields.test.ts
src/components/: BulkActionBar.tsx  ClientTimeline.tsx  CommandPalette.tsx  ContextMenu.tsx  ErrorFallback.tsx  NamedTable.tsx  ProjectBlockLayout.tsx  ProjectDetailContent.tsx  QuickTimerModal.tsx  QuoteToProjectWizard.tsx  SavedFilterBar.tsx  SortHeader.tsx  TaskDatePicker.tsx  UpdateChecker.tsx
src/db/: index.ts
src/hooks/: useAnimateIn.ts  useAutoBackup.ts  useBulkSelect.ts  useChartTheme.ts  useCountUp.ts  useErrorNotifications.ts  useOverdueCheck.ts  useRecurringCheck.ts  useTabSync.ts  useTimerActions.ts  useUnsavedChangesWarning.ts  useYearGrouping.ts
src/i18n/: ui.ts  (+3 more)
(+142 files in other folders)
